<resources>
    <string name="app_name">دار سدرة المنتهى</string>
    <string name="text_logo_splash">دار سدرة المنتهى </string>
    <string name="enter_student">دخول كطالب</string>
    <string name="enter_teacher">دخول كمعلم / كمعلمة</string>
    <string name="button_enter">دخول</string>
    <string name="enter_code">ادخل الكود</string>
    <string name="name_teacher">اسم المعلم / المعلمة</string>
    <string name="enrollment_teacher">تاريخ الانضمام</string>
    <string name="code_teacher">كود المعلم / المعلمة</string>
    <string name="mobile_number">التليفون</string>
    <string name="loading">تحميل ....</string>
    <string name="teacher_details_appbar">بيانات المعلم / المعلمة</string>
    <string name="rating_subscription_appbar">تفاصيل الاشتراك والتقييم</string>
    <string name="rating_salary_appbar">تفاصيل الراتب والتقييم</string>
    <string name="days_of_absence">ايام الغياب</string>
    <string name="days_increase">الايام الزيادة</string>
    <string name="salary">الراتب</string>
    <string name="add_status">Add Status</string>
    <string name="attendance_and_departure">الالتزام بميعاد الحضور و الإنصراف</string>
    <string name="number_ten">10</string>
    <string name="notes">الملاحظات</string>
    <string name="cleanliness_order_classroom">الحفاظ على نظافة و ترتيب الفصل</string>
    <string name="value_game_material">تناول قيمه أو لعبه مع الماده العلميه</string>
    <string name="Dealing_with_students">التعامل مع الطلاب و الجو العام</string>
    <string name="time_management">ادارة الوقت</string>
    <string name="total">المجموع</string>
    <string name="number_fifty">50</string>
    <string name="text_code_not_register">هذا الكود غير مسجل</string>
    <string name="name_student">اسم الطالب</string>
    <string name="joining_date">تاريخ الالتحاق</string>
    <string name="code_student">كود الطالب</string>
    <string name="mobile_father">تليفون الاب</string>
    <string name="mobile_mother">تليفون الام</string>
    <string name="class_student">فصل الطالب</string>
    <string name="date_session">ميعاد الطالب</string>
    <string name="born_date">تاريخ الميلاد</string>
    <string name="branch">الفرع</string>
    <string name="start_saving">بداية الحفظ</string>
    <string name="payment">تم الدفع</string>
    <string name="student_details_appbar">بيانات الطالب</string>
    <string name="status">الحاله</string>
    <string name="review">المراجعة</string>
    <string name="score">الدرجة</string>
    <string name="preservation">الحفظ</string>
    <string name="audience">الحضور</string>
    <string name="absence">الغياب</string>
    <string name="sign_in">تسجيل دخول</string>
    <string name="email_address">البريد الالكترونى</string>
    <string name="password">كلمة السر</string>
    <string name="sign_up">إنشاء حساب</string>
    <string name="do_not_have_an_account">ليس لديك حساب؟</string>
    <string name="forgot_password">هل نسيت كلمة السر؟</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="confirm_password">تأكيد كلمة السر</string>
    <string name="already_have_an_account">هل لديك حساب ؟</string>
    <string name="text_error1">الرجاء إدخال كلمة السر</string>
    <string name="text_error2">كلمة المرور قصيرة جدًا ، يجب أن تتكون كلمة السر من 6 أحرف على الأقل </string>
    <string name="text_error3">الرجاء إدخال تأكيد كلمة السر</string>
    <string name="text_error4">تأكيد كلمة السر لا يتطابق مع كلمة السر</string>
    <string name="first_text">أولاً ، دعنا نعيد تعيين كلمة المرور لحسابك</string>
    <string name="second_text">رجاءا أدخل بريدك الإلكتروني</string>
    <string name="message_forgot_password"> %1$s تحقق من بريدك الإلكتروني لإعادة تعيين كلمة السر الخاصة بك  </string>
    <string name="reset_password">إعادة تعيين كلمة السر</string>
    <string name="reset_password_appbar">تغيير كلمة السر</string>
    <string name="reservation_page_appbar">صفحة الحجز</string>
    <string name="main_home_appbar">الصفحة الرئيسية</string>
    <string name="privacy_policy_appbar">سياسة الخصوصية</string>
    <string name="about_appbar">من نحن</string>
    <string name="view_classes_appbar">عرض الفصول</string>
    <string name="view_branches_appbar">عرض الفروع</string>
    <string name="message_to_user">يتم استلام هذا الكود من ادارة سدرة المنتهى  شكرا</string>
    <string name="cancel">إلغاء</string>
    <string name="accept">موافق</string>
    <string name="notification">تنبيه</string>
    <string name="do_you_want_to_log_out">هل تريد تسجيل الخروج؟</string>

    <string name="days">الايام :</string>
    <string name="timing">التوقيت :</string>
    <string name="name_class">اسم الفصل :</string>
    <string name="text_class">الفصل :</string>
    <string name="text_timing">التوقيت :</string>

    <string name="jan">يناير</string>
    <string name="feb">فبراير</string>
    <string name="mar">مارس</string>
    <string name="apr">ابريل</string>
    <string name="may">مايو</string>
    <string name="jun">يونيو</string>
    <string name="jul">يوليو</string>
    <string name="aug">اغسطس</string>
    <string name="sep">سبتمبر</string>
    <string name="oct">اكتوبر</string>
    <string name="nov">نوفمبر</string>
    <string name="dec">ديسمبر</string>

    <string name="privacy_policy">سياسة الخصوصية</string>
    <string name="text_privacy_policy">تدرك (سدرة المنتهى) حالة القلق التي تساور بعض الناس فيما يخص بياناتهم الشخصية والخوف من استغلالها بصورة غير لائقة؛ ولذلك فإننا نضع بين يدي عملائنا وزوارنا الخطوط العريضة والاشتراطات الأساسية حيال ذلك، منوهين إلى طريقة جمعها وحمايتها والغرض منها في النقاط التالية: لا يتم إجبار العميل على إرسال بياناته إلينا، بل إذا رغب هو في ذلك، فإنه يرسلها طواعية عبر النموذج المخصص، ويكون السبب وراء ذلك هو الاستفادة من عروضنا أو التعاقد على إحدى خدماتنا، وكذلك لتسهيل التواصل بيننا وبينه. المعلومات المخزنة لدينا عن العملاء تساعدنا في تطوير خدماتنا وتلافي الخلل فيها، كما نزود عملاءنا من خلالها بكل مستجداتنا، من تصميمات وعروض وغير ذلك. عادة ما تكون البيانات التي يزودنا بها العميل ذات أهمية له هو على وجه الخصوص، ومن تلك البيانات (الاسم والبريد الإلكتروني والهاتف وكود الطالب او المعلم / المعلمة).</string>
    <string name="security_of_data">أمان بياناتك مسئوليتنا</string>
    <string name="text_security_of_data">تتكفل (سدرة المنتهى) بحفظ بيانات العملاء الشخصية وعدم التصرف فيها بالبيع أو المشاركة مع الغير، إلا إذا رغب العميل في ذلك بموجب موافقة كتابية ذات موثوقية، ولا يسري ذلك على البيانات العامة التي تُستخدم في الإحصاء وغيره، مع مراعاة عدم المساس بالمعلومات الشخصية . تستخدم (سدرة المنتهى) تقنية متطورة لحفظ معلومات العملاء الشخصية وبأعلى درجات السرية، من خلال خوادم خاصة؛ تكفل حمايتها من الإتلاف أو العبث. قرارك بيدك يحق للعملاء في أي وقت مطالبتنا بأن نتوقف عن استخدام البيانات الخاصة بهم، إذا رغبوا في ذلك.</string>
    <string name="item_log_out">تسجيل الخروج</string>
    <string name="about">من نحن</string>
    <string name="text_about">دار سدرة المنتهي لتحفيظ القران وتعليم القراءه والكتابة مرخصه من الازهر الشريف بتصريح 81 لسنه 2012 . و تهدف إلى إحياءالتراث القديم بأسلوب حديث .
        لها العديد من الانشطة التعليميه والترفهيه وتهتم بعلوم القران من (تفسير _تجويد) وإقامة المسابقات التشجيعية فى حفظ ( القران الكريم ـ الأحاديث النبويه ).  كما تحرص على تشجيع الطلاب و تقدير جهودهم بإقامة الحفلات والتكريمات و و تقديم شهادات التقدير المحفزه للطلاب و بذلك تكون أكثر من مجرد مكان.  و من سعيها لمواكبة الجيل الجديد .. نقدم هذا التطبيق لتحقيق تواصل أفضل مع أولياء الأمور و متابعة أفضل لمستوى أبنائنا الطلبة.</string>
    <string name="name_person">اسم الاب او الام</string>
    <string name="button_reservation">ارسال الحجز</string>
    <string name="message_confirm">تم الحجز , سيتم التواصل معك من خلال الاداره , شكرا</string>
    <string name="text_login_visitor">الدخول كزائر</string>
    <string name="achievements">الانجازات</string>


    <string-array name="list_month">
        <item> يناير</item>
        <item> فبراير</item>
        <item> مارس </item>
        <item> ابريل</item>
        <item> مايو </item>
        <item> يونيو </item>
        <item> يوليو </item>
        <item> اغسطس </item>
        <item> سبتمبر </item>
        <item> اكتوبر </item>
        <item> نوفمبر </item>
        <item> ديسمبر </item>
    </string-array>


</resources>