<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sub_color_app"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    tools:context=".activities.PrivacyPolicyActivity">

    <include
        android:id="@+id/toolbar_privacy_policy"
        layout="@layout/custom_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_privacy_policy"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:fontFamily="@font/amaranth"
                android:padding="10dp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/privacy_policy"
                android:gravity="start"
                android:layout_marginStart="6dp"
                android:text="@string/text_privacy_policy"
                android:textColor="@color/black_gray"
                android:textStyle="bold"
                android:textSize="16sp"
                android:fontFamily="@font/amaranth"
                android:textAlignment="viewStart"
                android:padding="10dp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/security_of_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_privacy_policy"
                android:text="@string/security_of_data"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp"
                android:fontFamily="@font/amaranth"
                android:padding="10dp"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_security_of_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/security_of_data"
                android:layout_marginStart="6dp"
                android:gravity="start"
                android:text="@string/text_security_of_data"
                android:textColor="@color/black_gray"
                android:textStyle="bold"
                android:textSize="16sp"
                android:fontFamily="@font/amaranth"
                android:textAlignment="viewStart"
                android:padding="10dp"
                />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>