<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/transparent"
    app:cardCornerRadius="20dp"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sub_color_app"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:fontFamily="@font/amaranth"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_alignParentEnd="true"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_message"
            android:layout_below="@id/text_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_confirm"
            android:layout_marginEnd="15dp"
            android:textColor="#000"
            android:fontFamily="@font/cairo_extralight"
            android:textSize="18sp"
            android:padding="5dp"
            android:layout_alignParentEnd="true"
            />

        <LinearLayout
            android:layout_below="@id/text_message"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            >

            <com.balysv.materialripple.MaterialRippleLayout
                style="@style/RippleStyleGrey"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                >

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_yes"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:textColor="#f00"
                    android:background="@color/transparent"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/accept"
                    />

            </com.balysv.materialripple.MaterialRippleLayout>



        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>