<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    android:background="@color/sub_color_app"
    tools:context=".activities.MainActivity">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:focusable="true"
            >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_logo"
        android:layout_marginTop="25dp"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/dar_sidra_splash"
        android:layout_centerHorizontal="true"
        />

    <RadioGroup
        android:id="@+id/group_selected"
        android:layout_below="@id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"

        >

    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/radio_button_student"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_student"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black_gray"
        android:layout_gravity="end"
        android:checked="true"
        android:buttonTint="@color/general_app"
        />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radio_button_teacher"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/enter_teacher"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black_gray"
            android:buttonTint="@color/general_app"
            />
    </RadioGroup>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/code_layout"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/group_selected"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:hint="@string/enter_code"
                android:textColorHint="@color/black_gray"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/black_gray"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_gray"
                    android:drawablePadding="10dp"
                    android:inputType="text"
                    android:drawableEnd="@drawable/ic_id_card"

                    />
            </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_button_enter"
        android:layout_below="@id/code_layout"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="25dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardBackgroundColor="@color/transparent"
        >

        <com.balysv.materialripple.MaterialRippleLayout
            style="@style/RippleStyleGrey"
            android:layout_width="110dp"
            android:layout_height="50dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_enter"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:background="@drawable/bg_button"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/button_enter"
                />

        </com.balysv.materialripple.MaterialRippleLayout>

    </androidx.cardview.widget.CardView>

        </RelativeLayout>

</ScrollView>